<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CommunicationChannelActivity">

    <TextView
        android:id="@+id/labelApplicationTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelCommunicationSelection"
        android:layout_below="@+id/labelApplicationTitle"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="150dp"
        android:text="@string/label_communication_selection"
        android:textColor="@color/colorGray"
        android:textSize="18sp"
        android:textStyle="normal" />

    <!-- Communication Selection -->
    <RelativeLayout
        android:id="@+id/layoutCommunicationSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelCommunicationSelection"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border">

        <Button
            android:id="@+id/button_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_button_type_3"
            android:text="@string/label_button_bluetooth"
            android:textColor="@color/colorWhite"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button_otg_serialport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/button_bluetooth"
            android:layout_alignLeft="@+id/button_bluetooth"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner_button_type_3"
            android:text="@string/label_button_otg_serialport"
            android:textColor="@color/colorWhite"
            android:textStyle="normal" />

    </RelativeLayout>
</RelativeLayout>
