<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".BluetoothScanActivity">

    <TextView
        android:id="@+id/labelApplicationTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelBluetoothTips"
        android:layout_below="@+id/labelApplicationTitle"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/label_bluetooth_tips"
        android:textColor="@color/colorGray"
        android:textSize="18sp"
        android:textStyle="normal" />

    <RelativeLayout
        android:id="@+id/layoutBluetoothListSelection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/labelBluetoothTips"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_border">

        <ListView
            android:id="@+id/list_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:smoothScrollbar="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner_button_type_3"
        android:text="@string/label_button_scan_bluetooth"
        android:textColor="@color/colorWhite"
        android:textStyle="normal" />

</RelativeLayout>
